# raytracer

./: .gitignore  .gitmodules  LICENSE  Raytracer.cabal  cabal.project  raytracer.cabal  stack.yaml
app/: Main.hs
script/: profile  run
src/: Geometry.hs
src/Data/: Orthtree.hs
src/Geometry/: Intersection.hs  Path.hs  Plane.hs  Ray.hs  Sphere.hs  Vector.hs
src/Image/: Colour.hs  Pixel.hs  Rendering.hs
src/Model/: Scene.hs
src/Probability/: Distribution.hs
test/: Spec.hs
test/Geometry/Ray/: Spec.hs
test/Geometry/Vector/: Spec.hs
