name:                raytracer
version:             0.1.0.0
synopsis:            An experimental raytracer
-- description:         Please see README.md
homepage:            http://github.com/robrix/raytracer#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2016-2018 Rob Rix
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geometry.Ray
                     , Geometry.Sphere
                     , Image.Rendering
                     , Model.Scene
                     , Probability.Distribution
  build-depends:       array
                     , base >= 4.7 && < 5
                     , bytestring
                     , lens
                     , linear
                     , mersenne-random-pure64
                     , MonadRandom
                     , parallel
                     , random
                     , type-aligned
  default-language:    Haskell2010

executable raytracer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linear
                     , raytracer
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Geometry.Ray.Spec
  build-depends:       base
                     , hspec
                     , linear
                     , QuickCheck
                     , raytracer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/raytracer
